# hasbrain

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hasbrain.cabal
app/: Main.hs
example/: addition.bf  helloworld.bf
src/: Hasbrain.hs
src/Hasbrain/: Interactive.hs  InterpreterCommon.hs  Loop.hs  LoopIntermediate.hs  NaiveInterpreter.hs  Parsing.hs  Surface.hs  Syntax.hs
src/Hasbrain/Interpreter/: Common.hs  Naive.hs
src/Hasbrain/Loop/: Instructions.hs  Interpreter.hs  Parsing.hs
src/Hasbrain/Surface/: Instructions.hs  Interpreter.hs  Parsing.hs
