cabal-version:      2.4
name:               hasbrain
version:            0.1.0.0
synopsis:           Haskell brainfuck interpreter/compiler
license:            BSD-2-Clause
author:             despresc
maintainer:         christian.j.j.despres@gmail.com
copyright:          2021 Christian Despres
extra-source-files: CHANGELOG.md

common base
  default-language: Haskell2010
  ghc-options: -Wall -Wextra
  build-depends: base >=4.13 && <5

executable hasbrain
  import: base
  main-is: Main.hs
  hs-source-dirs: app

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    Hasbrain
